--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,9 @@
     <string name="amount_eur">EUR</string>
     <string name="button_check">Check</string>
 
+    <string name="helper_personal_code">11 digits</string>
+    <string name="helper_amount">2000 – 10 000 EUR</string>
+    <string name="helper_period">12 – 60 months</string>
+
     <string name="error_personal_code_length">Value should contain 11 digits</string>
 </resources>
